src/assets/main.css
:root {
    --pico-warning: #ecc965;
    --pico-positive: #48ce66;
    --pico-negative: #ee4f5e;
}

body {
    overflow-x: scroll !important;
}


article hgroup button,
article hgroup a {
    position: absolute;
    right: 0;
    top: 0;
    font-size: 1.5em;
}

hgroup .mdi > span {
    display: none;
}

/*display when above phone width*/
@media screen and (min-width: 600px) {
    hgroup .mdi > span {
        display: inline;
        margin-left: 0.2em;
    }

    article hgroup button,
    article hgroup a {
        font-size: 1.1em;
    }
}


#app {
    display: flex;
    min-height: 100vh;
}

input.pw {
    -webkit-text-security: disc;
}

.core {
    display: flex;
    width: 100%;
}

.vh-center {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 100vh;
}

.end {
    float: right;
}


.layout-nav {
    transition: 0.2s;
    min-width: 275px;
    position: relative;
    height: 100%;
    border-right: 2px solid var(--pico-muted-border-color);
}

.layout-nav.collapsed {
    min-width: 75px !important;
}

.layout-nav .link-text {
    margin-left: 5px;
}

.layout-nav.collapsed .link-text {
    display: none;
}

.layout-nav nav .bottom {
    position: absolute;
    bottom: 20px;
    right: 15px;
}

.layout-nav nav {
    height: 100%;
    padding-top: 25px;
    padding-left: 25px;
    padding-right: 25px;
    background-color: var(--pico-card-background-color);

}


.router-link-active {
    color: var(--pico-primary) !important;
}


/*Pico Overrides*/




tr td {
    min-width: 150px;
}

figure {
    overflow-y: hidden;
}

a {
    cursor: pointer;
}

.container {
    max-width: 1060px !important;
}

.container-fluid > .container {
    padding-top: 0 !important;
}

.container.small {
    max-width: 700px !important;
}

article {
    border: 2px solid var(--pico-muted-border-color);
}

dialog article {
    min-width: 350px !important;
    max-width: 600px !important;
}

input {
    height: 55px !important;
}

input#search {
    height: 55px !important;
}

form[role="search"] input:focus {
    box-shadow: none !important;

}

input[type="file"] {
    box-sizing: border-box;
    height: 75px !important
}


form[role="search"] input[type="submit"] {
    padding-top: 10px !important;

}


.container-fluid,
.container {
    padding: 20px !important;
    padding-bottom: 0 !important;
}


article {
    margin-top: 0 !important;
    margin-bottom: 20px !important;
}

nav > ul > li {
    white-space: nowrap !important;
    overflow: hidden !important;
}

nav a {
    transition: 0.1s;
    color: var(--pico-muted-color);
}

nav a:hover {
    color: var(--pico-h3-color);
}

button {
    padding: 0.65em 1em !important;
    width: 100%;
}

a {
    text-decoration: none !important;
}

a[role="button"] {
    padding: 0.65em 1em !important;
}

details[open=""] {
    padding-bottom: 0 !important;
}


hgroup {
    margin-bottom: 0 !important;
    position: relative;
}

article .lead {
    margin-bottom: 0 !important;
}

small {
    font-size: 0.75em !important;
    color: var(--pico-secondary);
}

table hr {
    margin-bottom: 3px;
    margin-top: 3px;
}


nav[aria-label="breadcrumb"] a:hover {
    background-color: transparent;
    color: var(--pico-h3-color);
}


nav[aria-label="breadcrumb"] .router-link-active {
    background-color: transparent;
    color: var(--pico-muted-color);
}


nav[aria-label="breadcrumb"] > ul > li {
    padding-top: 0px;
}

nav .bottom a:focus,
nav .bottom a:hover,
nav summary:focus {
    background-color: transparent !important;
}

nav a:hover,
nav summary:hover {
    text-decoration: underline !important;
}

nav > ul > li {
    font-size: 1em;
}


/* Error Article/Card */

article.error {
    padding: 10px;
    display: flex;
    background-color: rgba(233, 6, 6, 0.281);
    margin-bottom: 15px;
}

article.error ul {
    margin: 0;
    padding: 0;
    flex: 1;
}

article.error ul li {
    list-style: none;
    margin: 0;
    padding: 0;
    color: rgb(211, 153, 153);
    font-size: 0.9em;
}


th, td {
    background-color: var(--pico-card-background-color) !important;
}

th {
    color: var(--pico-contrast) !important;
}


summary:focus {
    color: inherit !important;
}

summary:hover {
    color: var(--pico-primary-hover) !important;
}


/* CSS Animations */
.fadeIn {
    animation: fadeIn 0.5s ease-in-out;
}

.bounce {
    animation: bounce 0.7s ease-in-out;
}

/* FadeIn */
@keyframes fadeIn {
    from {
        opacity: 0;
    }

    to {
        opacity: 1;
    }
}


@keyframes bounce {
    0% {
        transform: translateY(0) scale(1.2);
    }

    25% {
        transform: translateY(-7px);
    }

    50% {
        transform: translateY(0);
    }

    75% {
        transform: translateY(-3px);
    }


    100% {
        transform: translateY(0) scale(1);

    }

}


.actions {
    display: flex;
    gap: 0.5em;
}

.actions button {
    padding: 5px !important;
    font-size: 1em;
    margin: 0 !important;
    width: fit-content;
    min-width: 65px;
}

.neutral {
    color: var(--pico-muted-color) !important;
}

.positive {
    color: var(--pico-positive) !important;
}

.negative {
    color: var(--pico-negative) !important;
}

.warning {
    color: var(--pico-warning) !important;
}

